--- a/BlackDjack/package.json
+++ b/BlackDjack/package.json
@@ -25,5 +25,8 @@
     "style-loader": "^3.2.1",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "prompt": "^1.2.0"
   }
 }
