--- a/reactTicTacToe/package.json
+++ b/reactTicTacToe/package.json
@@ -32,6 +32,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-actions": "^2.6.5",
+    "reselect": "^4.0.0"
   }
 }
