--- a/react_koa_blackjack/client/package.json
+++ b/react_koa_blackjack/client/package.json
@@ -37,6 +37,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-actions": "^2.6.5",
+    "reselect": "^4.0.0"
   }
 }
