--- a/react_koa_blackjack/client/package.json
+++ b/react_koa_blackjack/client/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
+    "redux-axios-middleware": "^4.0.1",
     "reselect": "^4.0.0"
   }
 }
