--- a/react_koa_blackjack/server/package.json
+++ b/react_koa_blackjack/server/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-jwt": "^4.0.1",
     "koa-static": "^5.0.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "uuid": "^8.3.2"
   }
 }
