--- a/react_koa_blackjack/server/package.json
+++ b/react_koa_blackjack/server/package.json
@@ -16,6 +16,7 @@
     "koa-jwt": "^4.0.1",
     "koa-static": "^5.0.0",
     "nodemon": "^2.0.12",
+    "path": "^0.12.7",
     "uuid": "^8.3.2"
   }
 }
