--- a/react_koa_blackjack/server/package.json
+++ b/react_koa_blackjack/server/package.json
@@ -15,6 +15,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-jwt": "^4.0.1",
     "koa-static": "^5.0.0",
+    "mongoose": "^6.0.7",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
