--- a/nextJS/package.json
+++ b/nextJS/package.json
@@ -12,10 +12,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.42.1"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "sass": "^1.42.1",
+    "swiper": "^7.0.8"
   }
 }
