--- a/shopify/learnproject2/package.json
+++ b/shopify/learnproject2/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/shopify/shopify-app-node/issues"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@babel/core": "7.12.10",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.12.11",
@@ -30,6 +31,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.12.5",
     "isomorphic-fetch": "^3.0.0",
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
