--- a/shopify/learnproject2/package.json
+++ b/shopify/learnproject2/package.json
@@ -42,6 +42,7 @@
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
+    "react-router-dom": "^5.3.0",
     "webpack": "^4.44.1"
   },
   "devDependencies": {
