--- a/shopify/learnproject2/package.json
+++ b/shopify/learnproject2/package.json
@@ -36,9 +36,11 @@
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
+    "lodash": "^4.17.21",
     "next": "^10.0.4",
     "next-env": "^1.1.0",
     "node-fetch": "^2.6.1",
+    "query-string": "^7.0.1",
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
