--- a/shopify/learnproject2/package.json
+++ b/shopify/learnproject2/package.json
@@ -1,10 +1,11 @@
 {
+  "type": "module",
   "name": "shopify-app-node",
   "version": "1.0.0",
   "description": "Shopify's node app for CLI tool",
   "scripts": {
     "test": "jest",
-    "dev": "cross-env NODE_ENV=development nodemon ./server/index.js --watch ./server/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./server/index.js --watch ./server",
     "build": "webpack",
     "start": "cross-env NODE_ENV=production node ./server/index.js"
   },
@@ -36,6 +37,7 @@
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
     "next-env": "^1.1.0",
     "node-fetch": "^2.6.1",
@@ -44,22 +46,37 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.3.0",
-    "webpack": "^4.44.1"
+    "webpack": "^5.58.2"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
     "@babel/preset-stage-3": "^7.0.0",
     "babel-jest": "26.6.3",
+    "babel-loader": "^8.2.2",
     "babel-register": "^6.26.0",
+    "css-loader": "^6.2.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
+    "exports-loader": "^3.0.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.4.0",
     "husky": "^4.3.6",
+    "image-webpack-loader": "^7.0.1",
     "jest": "26.6.3",
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.0",
     "prettier": "2.2.1",
     "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.14.0"
+    "react-test-renderer": "16.14.0",
+    "regenerator-runtime": "^0.13.9",
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "webpack-cli": "^4.9.1"
   },
   "husky": {
     "hooks": {
