--- a/shopify/learnproject2/package.json
+++ b/shopify/learnproject2/package.json
@@ -1,11 +1,12 @@
 {
+
   "name": "shopify-app-node",
   "version": "1.0.0",
   "description": "Shopify's node app for CLI tool",
   "scripts": {
-    "test": "jest",
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch ./server",
+    "watch": "webpack --mode=development --watch",
     "build": "webpack",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch ./server",
     "start": "cross-env NODE_ENV=production node server/index.js"
   },
   "repository": {
@@ -19,7 +20,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
-    "@babel/core": "7.12.10",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.10",
@@ -50,7 +50,7 @@
     "webpack": "^5.58.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
