--- a/shopify/learnproject2/client/package.json
+++ b/shopify/learnproject2/client/package.json
@@ -1,23 +1,14 @@
 {
-
-  "name": "shopify-app-node",
+  "name": "client",
   "version": "1.0.0",
-  "description": "Shopify's node app for CLI tool",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "watch": "webpack --mode=development --watch",
-    "build": "webpack",
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch ./server",
-    "start": "cross-env NODE_ENV=production node server/index.js"
+    "build": "webpack"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shopify/shopify-app-node.git"
-  },
-  "author": "Shopify Inc.",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shopify/shopify-app-node/issues"
-  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@babel/polyfill": "^7.6.0",
@@ -26,22 +17,14 @@
     "@shopify/app-bridge": "^2.0.4",
     "@shopify/app-bridge-react": "^2.0.2",
     "@shopify/app-bridge-utils": "^2.0.2",
-    "@shopify/koa-shopify-auth": "^4.1.2",
     "@shopify/polaris": "^6.2.0",
     "@shopify/shopify-api": "^1.4.2",
     "apollo-boost": "^0.4.9",
     "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.12.5",
     "isomorphic-fetch": "^3.0.0",
-    "koa": "^2.13.1",
-    "koa-router": "^10.0.0",
-    "koa-session": "^6.1.0",
-    "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
-    "next-env": "^1.1.0",
-    "node-fetch": "^2.6.1",
     "query-string": "^7.0.1",
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
@@ -69,7 +52,6 @@
     "image-webpack-loader": "^7.0.1",
     "jest": "26.6.3",
     "lint-staged": "^10.5.3",
-    "nodemon": "^2.0.0",
     "prettier": "2.2.1",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0",
