--- a/shopify/learnproject2/server/package.json
+++ b/shopify/learnproject2/server/package.json
@@ -17,6 +17,7 @@
     "@shopify/app-bridge-utils": "^2.0.2",
     "@shopify/koa-shopify-auth": "^4.1.2",
     "@shopify/shopify-api": "^1.4.2",
+    "axios": "^0.23.0",
     "cross-env": "^7.0.3",
     "isomorphic-fetch": "^3.0.0",
     "koa": "^2.13.1",
