--- a/shopify/learnproject2/server/package.json
+++ b/shopify/learnproject2/server/package.json
@@ -20,7 +20,9 @@
     "axios": "^0.23.0",
     "cross-env": "^7.0.3",
     "isomorphic-fetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
